# docker_image_streamlit

./: Dockerfile  README.md  app.py  pyproject.toml
app/: app.py
data/: customer_churn_sample.csv
